--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="outer-container">
             <div class="header-upper clearfix">
                 <div class="upper-left pull-left clearfix">
-                    <figure class="logo-box"><a href="#"><img src="images/logo2.png" alt="" height="170" width="100"></a></figure>
+                    <figure class="logo-box"><a href="#"><img src="images/logo2.png" alt="" height="290" width="220"></a></figure>
                     <div class="info-box">
                         <div class="box">
                             <div class="icon-box"><i class="flaticon-telephone"></i></div>
@@ -67,13 +67,13 @@
                                         <a href="index.html">Home</a>
                                     </li> 
                                     <li class="#">
-                                        <a href="#">About Us</a>
+                                        <a class="nav-link scrollto" href="#aboutus">About Us</a>
                                     </li>
                                     <li class="#">
-                                        <a href="#">Service</a>
+                                        <a class="nav-link scrollto" href="#service">Service</a>
                                     </li>                           
                                     <li>
-                                        <a href="#">Contact</a>
+                                        <!-- <a class="nav-link scrollto" href="#">Contact</a> -->
                                     </li>
                                     
                                 </ul>
